Bug 374897 - Wrong test for empty locations after directory filtering in MercurialPlugin::add
Summary: Wrong test for empty locations after directory filtering in MercurialPlugin::add
Status: RESOLVED FIXED
Alias: None
Product: kdevplatform
Classification: Developer tools
Component: mercurial (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-11 07:55 UTC by Frank Fischer
Modified: 2017-01-17 15:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Fischer 2017-01-11 07:55:58 UTC
The condition `if (localLocations.empty())` in method MercurialPlugin::add (line 201 in the current master) should probably be `if (locations.empty())` (as it is in many other methods).
Comment 1 Sergey Kalinichev 2017-01-17 15:46:40 UTC
Git commit 25277ccfb043c8b51349bbf95c35e53c27a8704e by Sergey Kalinichev.
Committed on 15/01/2017 at 13:34.
Pushed by vpuhov into branch 'master'.

Fix MercurialPlugin::add in non-recursive case

Spotted by Frank Fischer

M  +1    -1    mercurialplugin.cpp
M  +3    -0    tests/test_mercurial.cpp

https://commits.kde.org/kdev-mercurial/25277ccfb043c8b51349bbf95c35e53c27a8704e