Fix MercurialPlugin::add in non-recursive case

Spotted by Frank Fischer

BUG: 374897